<resources>
    <string name="app_name">Llevame</string>
    <string name="facebook_app_id">1659562204063254</string>

    <!--Login Strings-->
    <string name="cancel_login">El login ha sido cancelado</string>
    <string name="login_error">Hubo un error al iniciar sesion</string>
    <string name="logout">Cerrar Sesión</string>
    <string name="login">Iniciar Sesión</string>
    <string name="main_menu_title">Menú principal</string>
    <string name="username">Nombre de usuario:</string>
    <string name="password">Contraseña:</string>
    <string name="server_login_failed">Nombre de usuario y contraseña inválidos</string>


    <!--Main Strings -->
    <string name="welcome">Bienvenido a llevame</string>
    <string name="welcome_description">Comienza a viajar de la forma más facil</string>
    <string name="modify_your_profile">Modifica tu perfil</string>
    <string name="delete_your_profile">Elimina tu perfil</string>
    <string name="register">Registrarse</string>
    <string name="register_with_facebook">Registrarse con facebook</string>
    <string name="register_with_facebook_description">Ingrese la siguiente información para luego poder iniciar sesión con facebook</string>

    <!--Payment Strings -->
    <string name="paymennt_title">Forma de Pago</string>
    <string name="payment_Description">Seleccione su forma de pago para poder viajar</string>
    <string name="paymethod_cash">Efectivo</string>
    <string name="paymethod_card">Tarjeta</string>
    <string name="cash_ARS">ARS</string>
    <string name="cash_USD">USD</string>
    <string name="card_expiration_month">Vence mes</string>
    <string name="card_expiration_year">Vence año</string>
    <string name="card_number">Número de tarjeta</string>
    <string name="card_type">Tipo: (VISA,MASTER)</string>
    <string name="card_security_code">Código de seguridad</string>
    <string name="card_VISA">VISA</string>
    <string name="card_MASTER">MASTER</string>
    <string name="payment_ok">Aceptar</string>
    <string name="card_number_should_not_empty">Por favor, ingrese su numero de tarjeta</string>
    <string name="card_expiraton_month_not_empty">Por favor, ingrese el mes de vencimiento de su tarjeta</string>
    <string name="card_expiration_year_not_empty">Por favor, ingrese el año de vencimiento de  su tarjeta</string>
    <string name="card_security_code_not_empty">Por favor, ingrese el codigo de seguridad de su tarjeta</string>

    <!--Register -->
    <string name="confirm_password">Confirmar contraseña:</string>
    <string name="send">Enviar</string>
    <string name="username_should_not_empty">Por favor, ingrese su nombre de usuario</string>
    <string name="password_should_not_empty">Por favor, ingrese su contraseña</string>
    <string name="confirm_password_should_not_empty">Por favor, confirme su contraseña</string>
    <string name="passwords_not_match">Por favor, confirme su contraseña</string>
    <string name="register_succeded">Usted se ha registrado correctamente</string>
    <string name="is_a_driver">Soy chofer</string>
    <string name="title_activity_register">RegisterActivity</string>


    <!--Profile -->
    <string name="start_trip">Comenzar a viajar</string>
    <string name="driver_available">Disponible</string>
    <string name="driver_on_trip">En viaje</string>
    <string name="edit_payment_method">Editar forma de pago</string>


    <!--Modify your profile-->
    <string name="save_changes">Guardar cambios</string>
    <string name="name">Nombre:</string>
    <string name="surname">Apellido:</string>
    <string name="country">País:</string>
    <string name="email">Dirección de correo electrónico:</string>
    <string name="birthdate">Fecha de nacimiento (DD/MM/AAAA):</string>
    <string name="name_should_not_empty">Por favor, ingrese su nombre</string>
    <string name="surname_should_not_empty">Por favor, ingrese su apellido</string>
    <string name="email_should_not_empty">Por favor, ingrese una direccion de email valida</string>
    <string name="birthdate_should_not_empty">Por favor, ingrese su fecha de nacimiento</string>
    <string name="country_should_not_empty">Por favor, ingrese su país</string>
    <string name="modify_profile_success">Su perfil se ha modificado con exito</string>

    <!--Delete your profile-->
    <string name="delete_profile_title">Desea eliminar su perfil?</string>
    <string name="delete_profile_warning">Este proceso no es reversible</string>
    <string name="delete_my_profile">Eliminar mi perfil</string>
    <string name="delete_success">Usuario eliminado con exito</string>
    <string name="title_activity_delete_profile">DeleteProfileActivity</string>

    <!--Errors-->
    <string name="response_error">Error en la respuesta</string>
    <string name="title_activity_modify_profile">ModifyProfileActivity</string>
    <string name="server_failed">Lo sentimos, hubo un error</string>
    <string name="server_failed_drivers">Lo sentimos, hubo un error, no se mostrarán los choferes disponibles</string>
    <string name="server_login_facebook_failed">Para poder iniciar sesión en facebook, usted debe registrarse primero</string>
    <string name="permisson_denied_error">Para poder viajar se necesitan los permisos de ubicacion</string>
    <string name="complete_fields_error">Por favor, ingrese las ubicaciones correctamente</string>
    <string name="no_drivers_available">En este momento no se encuentran choferes disponibles, por favor intentelo más tarde</string>
    <string name="no_location_error">Por favor, encienda el GPS</string>
    <string name="no_money_available">En este momento no cuenta con el suficiente dinero para hacer el viaje</string>
    <string name="title_location_permission">Permisos de ubicacion</string>
    <string name="text_location_permission">Llevame solicita acceder a su ubicación para poder comenzar a viajar</string>
    <string name="text_location_confirm">Confirmar</string>


    <!--Map activity-->
    <string name="title_activity_maps">Map</string>
    <string name="where_go">¿A dónde vas?</string>
    <string name="message_recived">Mensaje recibido</string>
    <string name="accept_trip">Aceptar viaje</string>
    <string name="reject_trip">Rechazar viaje</string>
    <string name="go">Ir</string>
    <string name="notification_sent">Chofer asignado, en breve se le comunicará la respuesta del mismo para iniciar el viaje</string>
    <string name="started_trip">Viaje Comenzado</string>
    <string name="finished_trip">Viaje Finalizado</string>


</resources>
