<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.taller2.llevame.PaymentActivity">

    <ScrollView
        android:id="@+id/ScrollView01"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <android.support.constraint.ConstraintLayout
            android:id="@+id/RelativeLayout01"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="visible">

        <TextView
            android:id="@+id/paymentTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/paymennt_title"
            android:textSize="30sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.042" />

        <TextView
            android:id="@+id/paymentDescription"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/payment_Description"
            android:textSize="15sp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginTop="15dp"
            app:layout_constraintTop_toBottomOf="@+id/paymentTitle"
            app:layout_constraintHorizontal_bias="0.508" />

        <Switch
            android:id="@+id/switchCashPaymethod"
            android:layout_width="115dp"
            android:layout_height="29dp"
            android:text="@string/paymethod_cash"
            android:layout_marginTop="20dp"
            app:layout_constraintTop_toBottomOf="@+id/paymentDescription"
            android:layout_marginLeft="30dp"
            app:layout_constraintLeft_toLeftOf="parent" />

            <Switch
                android:id="@+id/cashARS"
                android:layout_width="79dp"
                android:layout_height="22dp"
                android:text="@string/cash_ARS"
                app:layout_constraintLeft_toRightOf="@+id/switchCashPaymethod"
                android:layout_marginLeft="35dp"
                android:layout_marginTop="20dp"
                app:layout_constraintTop_toBottomOf="@+id/paymentDescription" />

            <Switch
                android:id="@+id/cashUSD"
                android:layout_width="77dp"
                android:layout_height="25dp"
                android:text="@string/cash_USD"
                android:layout_marginLeft="180dp"
                app:layout_constraintLeft_toLeftOf="parent"
                android:layout_marginTop="8dp"
                app:layout_constraintTop_toBottomOf="@+id/cashARS" />


            <Switch
                android:id="@+id/switchCardPaymethod"
                android:layout_width="110dp"
                android:layout_height="30dp"
                android:text="@string/paymethod_card"
                android:layout_marginTop="60dp"
                app:layout_constraintTop_toBottomOf="@+id/switchCashPaymethod"
                android:layout_marginLeft="30dp"
                app:layout_constraintLeft_toLeftOf="parent" />

            <TextView
                android:id="@+id/cardNumber"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/card_number"
                android:textSize="15sp"
                app:layout_constraintHorizontal_bias="0.034"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                android:layout_marginLeft="30dp"
                android:layout_marginStart="30dp"
                android:layout_marginTop="20dp"
                app:layout_constraintTop_toBottomOf="@+id/switchCardPaymethod" />

            <EditText
                android:id="@+id/cardNumberInput"
                android:layout_height="40dp"
                android:layout_width="316dp"
                android:inputType="number"
                android:maxLength="16"
                android:layout_marginLeft="30dp"
                app:layout_constraintLeft_toLeftOf="parent"
                android:layout_marginRight="30dp"
                app:layout_constraintRight_toRightOf="parent"
                android:layout_marginTop="10dp"
                app:layout_constraintTop_toBottomOf="@+id/cardNumber"
                app:layout_constraintHorizontal_bias="0.0"
                android:layout_marginStart="30dp"
                android:layout_marginEnd="30dp" />

            <TextView
                android:id="@+id/cardExpirationMonth"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/card_expiration_month"
                android:textSize="15sp"
                app:layout_constraintHorizontal_bias="0.035"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                android:layout_marginLeft="30dp"
                android:layout_marginStart="30dp"
                android:layout_marginTop="10dp"
                app:layout_constraintTop_toBottomOf="@+id/cardNumberInput" />

            <EditText
                android:id="@+id/cardExpirationMonthInput"
                android:layout_width="90dp"
                android:layout_height="40dp"
                android:layout_marginEnd="30dp"
                android:layout_marginLeft="20dp"
                android:layout_marginStart="30dp"
                android:layout_marginTop="10dp"
                android:inputType="number"
                android:maxLength="2"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/cardExpirationMonth" />

            <TextView
                android:id="@+id/cardExpirationYear"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/card_expiration_year"
                android:textSize="15sp"
                android:layout_marginStart="30dp"
                android:layout_marginTop="10dp"
                app:layout_constraintTop_toBottomOf="@+id/cardNumberInput"
                app:layout_constraintLeft_toRightOf="@+id/cardExpirationMonth"
                android:layout_marginLeft="8dp" />

            <EditText
                android:id="@+id/cardExpirationYearInput"
                android:layout_width="90dp"
                android:layout_height="40dp"
                android:layout_marginEnd="30dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="10dp"
                android:inputType="number"
                android:maxLength="2"
                app:layout_constraintLeft_toRightOf="@+id/cardExpirationMonthInput"
                app:layout_constraintTop_toBottomOf="@+id/cardExpirationYear" />

            <Switch
                android:id="@+id/cardVISA"
                android:layout_width="79dp"
                android:layout_height="22dp"
                android:text="@string/card_VISA"
                android:layout_marginRight="15dp"
                app:layout_constraintRight_toRightOf="parent"
                android:layout_marginTop="10dp"
                app:layout_constraintTop_toBottomOf="@+id/cardNumberInput" />

            <Switch
                android:id="@+id/cardMASTER"
                android:layout_width="111dp"
                android:layout_height="29dp"
                android:text="@string/card_MASTER"
                android:layout_marginTop="10dp"
                app:layout_constraintTop_toBottomOf="@+id/cardVISA"
                android:layout_marginRight="15dp"
                app:layout_constraintRight_toRightOf="parent"
                tools:layout_editor_absoluteX="258dp" />

            <TextView
                android:id="@+id/cardSecurityCode"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/card_security_code"
                android:textSize="15sp"
                android:layout_marginStart="30dp"
                android:layout_marginTop="10dp"
                app:layout_constraintTop_toBottomOf="@+id/cardExpirationYearInput"
                android:layout_marginLeft="30dp"
                app:layout_constraintLeft_toLeftOf="parent" />

            <EditText
                android:id="@+id/cardSecurityCodeInput"
                android:layout_width="100dp"
                android:layout_height="40dp"
                android:layout_marginEnd="30dp"
                android:layout_marginStart="30dp"
                android:layout_marginTop="10dp"
                android:inputType="number"
                android:maxLength="3"
                app:layout_constraintTop_toBottomOf="@+id/cardSecurityCode"
                android:layout_marginLeft="30dp"
                app:layout_constraintLeft_toLeftOf="parent" />


            <Button
                android:id="@+id/okButton"
                android:layout_width="0dp"
                android:layout_height="46dp"
                android:text="@string/payment_ok"
                android:onClick="okButtonPressed"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:layout_marginTop="20dp"
                app:layout_constraintTop_toBottomOf="@+id/cardSecurityCodeInput"
                app:layout_constraintHorizontal_bias="0.0" />
        </android.support.constraint.ConstraintLayout>

    </ScrollView>


</android.support.constraint.ConstraintLayout>
