<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.taller2.llevame.ModifyProfileActivity">

    <TextView
        android:id="@+id/main_menu_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/modify_your_profile"
        android:textSize="30sp"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/name"
        android:textSize="15sp"
        app:layout_constraintHorizontal_bias="0.012"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginBottom="0dp"
        android:layout_marginLeft="30dp"
        app:layout_constraintBottom_toTopOf="@+id/editNameInput" />

    <EditText
        android:id="@+id/editNameInput"
        android:layout_height="40dp"
        android:layout_width="316dp"
        android:inputType="text"
        android:layout_marginLeft="30dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginRight="30dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="40dp"
        app:layout_constraintTop_toBottomOf="@+id/main_menu_title"
        app:layout_constraintHorizontal_bias="0.0" />

    <TextView
        android:id="@+id/surname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/surname"
        android:textSize="15sp"
        app:layout_constraintHorizontal_bias="0.012"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginBottom="0dp"
        android:layout_marginLeft="30dp"
        app:layout_constraintBottom_toTopOf="@+id/editSurnameInput" />

    <EditText
        android:id="@+id/editSurnameInput"
        android:layout_height="40dp"
        android:layout_width="316dp"
        android:inputType="text"
        android:layout_marginLeft="30dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginRight="30dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="30dp"
        app:layout_constraintTop_toBottomOf="@+id/editNameInput"
        app:layout_constraintHorizontal_bias="0.0" />

    <TextView
        android:id="@+id/country"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/country"
        android:textSize="15sp"
        app:layout_constraintHorizontal_bias="0.012"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginBottom="0dp"
        android:layout_marginLeft="30dp"
        app:layout_constraintBottom_toTopOf="@+id/countryInput" />

    <EditText
        android:id="@+id/countryInput"
        android:layout_height="40dp"
        android:layout_width="316dp"
        android:inputType="text"
        android:layout_marginLeft="30dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginRight="30dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="30dp"
        app:layout_constraintTop_toBottomOf="@+id/editSurnameInput"
        app:layout_constraintHorizontal_bias="0.0" />

    <TextView
        android:id="@+id/email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/email"
        android:textSize="15sp"
        app:layout_constraintHorizontal_bias="0.012"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginBottom="0dp"
        android:layout_marginLeft="30dp"
        app:layout_constraintBottom_toTopOf="@+id/emailInput" />

    <EditText
        android:id="@+id/emailInput"
        android:layout_height="40dp"
        android:layout_width="316dp"
        android:inputType="text"
        android:layout_marginLeft="30dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginRight="30dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="30dp"
        app:layout_constraintTop_toBottomOf="@+id/countryInput"
        app:layout_constraintHorizontal_bias="0.0" />

    <TextView
        android:id="@+id/birthdate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/birthdate"
        android:textSize="15sp"
        app:layout_constraintHorizontal_bias="0.012"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginBottom="0dp"
        android:layout_marginLeft="30dp"
        app:layout_constraintBottom_toTopOf="@+id/birthdateInput" />

    <EditText
        android:id="@+id/birthdateInput"
        android:layout_height="40dp"
        android:layout_width="316dp"
        android:inputType="text"
        android:layout_marginLeft="30dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginRight="30dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="30dp"
        app:layout_constraintTop_toBottomOf="@+id/emailInput"
        app:layout_constraintHorizontal_bias="0.0" />

    <Button
        android:id="@+id/modifyProfile"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/save_changes"
        android:onClick="saveChangesButtonPressed"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="480dp"
        app:layout_constraintHorizontal_bias="0.151"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp" />

<!--    <include layout="@layout/content_modify_profile" />-->


</android.support.constraint.ConstraintLayout>
